tests/fail/va_args_zero.zf
extc foo(__c_va_args): int;